--- a/wiringx/Cargo.toml
+++ b/wiringx/Cargo.toml
@@ -2,5 +2,11 @@
 name = "wiringx"
 version = "0.1.0"
 edition = "2021"
+description = "safe and Rusty bindings to the wiringX library"
+homepage = "https://wiringx.org"
+license = "MPL-2.0"
+keywords = ["GPIO", "Milk-V", "embedded"]
+readme = "README.md"
 
 [dependencies]
+wiringx-sys = {path = "../wiringx-sys"}
