Implement functionality for gpio, i2c, pwm and spi.

--- a/wiringx/Cargo.toml
+++ b/wiringx/Cargo.toml
@@ -9,4 +9,6 @@ keywords = ["GPIO", "Milk-V", "embedded"]
 readme = "README.md"
 
 [dependencies]
+parking_lot = "0.12"
+thiserror = "1.0"
 wiringx-sys = {path = "../wiringx-sys"}
