--- a/wiringx-sys/Cargo.toml
+++ b/wiringx-sys/Cargo.toml
@@ -4,6 +4,7 @@ version = "2.0.0"
 edition = "2021"
 description = "low level bindings to the wiringX library"
 homepage = "https://wiringx.org"
+repository = "https://github.com/Letronix624/wiringx-rs"
 license = "MPL-2.0"
 keywords = ["GPIO"]
 readme = "README.md"
