--- a/wiringx-sys/Cargo.toml
+++ b/wiringx-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wiringx-sys"
-version = "2.0.0"
+version = "0.1.0+milkv-wiringx.2.0.0"
 edition = "2021"
 description = "low level bindings to the wiringX library"
 homepage = "https://wiringx.org"
